--- a/viewer.html
+++ b/viewer.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--
 Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 
@@ -22,7 +22,7 @@ or in the "license" file accompanying this file. This file is distributed on an 
         <link rel="stylesheet" href="css/viewer.css">
     </head>
     <body>
-        <p>This is the viewer page!</p>
+        <p>LEEEEEROYYYY JENKINSSSSSSSSSSSSSSS</p>
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script src="js/common.js"></script>
         <script src="js/viewer.js"></script>
