--- a/viewer.html
+++ b/viewer.html
@@ -8,10 +8,17 @@
         <link rel="stylesheet" href="css/viewer.css">
     </head>
     <body>
-        <h1>LEEEEEROYYYY JENKINSSSSSSSSSSSSSSS</h1>
-        <div class="anglecontainer">
-            <input type="range" min="0" max="90" value="50" class="slider" id="angleSlider">
-            <div><span id="display"><pre> Degrees</pre></span></div>
+        <h1 id="title">LEEEEEROYYYY JENKINSSSSSSSSSSSSSSS</h1>
+        <div class="angleContainer">
+            <input type="range" min="0" max="90" value="45" class="horSlider" id="angleSlider">
+            <p><span id="angleDisplay"></span></p>
+        </div>
+        <div class="powerContainer">
+            <input type="range"  min="1" max="100" value="50" class="verSlider" id="powerSlider">
+            <p><span id="powerDisplay"></span></p>
+        </div>
+        <div class="sendButton">
+            <button type="button" class="block" id="sendButton">Fire Pucks</button>
         </div>
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script src="js/common.js"></script>
