--- a/public/viewer.html
+++ b/public/viewer.html
@@ -1,45 +1,46 @@
 ﻿<!doctype html>
 <html lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/viewer.css">
-    </head>
-    <body>
-        <!--<h1 id="title">Controller</h1>-->
-        <!--<div class="angleContainer">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/viewer.css">
+
+</head>
+<body>
+    <!--<h1 id="title">Controller</h1>-->
+    <!--<div class="angleContainer">
         <input type="range" min="0" max="90" value="45" class="horSlider" id="angleSlider">
         <p><span id="angleDisplay"></span></p>
     </div>-->
-        <div class="powerContainer">
-            <input type="range" min="1" max="100" value="50" class="leftPowerSlider" id="leftPowerSlider">
-            <input type="range" min="1" max="100" value="50" class="rightPowerSlider" id="rightPowerSlider">
-        </div>
-        <div class="powerDisplay">
-            <p><span id="leftPowerDisplay"></span></p>
-            <p><span id="rightPowerDisplay"></span></p>
-        </div>
-        <div class="slider">
-            <input id="leftAngle" />
-            <input id="rightAngle" />
-        </div>
-        <div class="puckNumber">
-            <input type="text" id="leftLauncher" class="leftLauncher" onkeypress="return AllowNumbersOnly(event)">
-            <input type="text" id="rightLauncher" class="rightLauncher" onkeypress="return AllowNumbersOnly(event)">
-            <!--<p><span id="leftDisplay"></span></p>
-        <p><span id="rightDisplay"></span></p>-->
-        </div>
-        <p><span id="totalPucks"></span></p>
-        <div class="sendButton">
-            <button type="button" class="block" id="sendButton">Fire Pucks</button>
-        </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.js"></script>
-        <script src="js/common.js"></script>
-        <script src="js/viewer.js"></script>
-    </body>
+    <div class="powerContainer">
+        <input type="range" min="1" max="100" value="50" class="leftPowerSlider" id="leftPowerSlider">
+        <input type="range" min="1" max="100" value="50" class="rightPowerSlider" id="rightPowerSlider">
+    </div>
+    <div class="powerDisplay">
+        <p><span id="leftPowerDisplay"></span></p>
+        <p><span id="rightPowerDisplay"></span></p>
+    </div>
+    <div class="slider">
+        <input id="leftAngle" />
+        <input id="rightAngle" />
+    </div>
+    <div class="puckNumber">
+        <input type="text" id="leftLauncher" class="leftLauncher" onkeypress="return AllowNumbersOnly(event)">
+        <input type="text" id="rightLauncher" class="rightLauncher" onkeypress="return AllowNumbersOnly(event)">
+    </div>
+    <div class="sendButton">
+        <button type="button" class="block" id="sendButton">Fire Pucks</button>
+    </div>
+    <p><span id="userName"></span></p>
+    <p><span id="totalPucks"></span></p>
+    <p><span id="playerScore"></span></p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/viewer.js"></script>
+</body>
 </html>
