--- a/public/viewer.html
+++ b/public/viewer.html
@@ -14,32 +14,15 @@
         <input type="range" min="0" max="90" value="45" class="horSlider" id="angleSlider">
         <p><span id="angleDisplay"></span></p>
     </div>-->
-    <div class="powerContainer">
-        <input type="range" min="1" max="100" value="50" class="leftPowerSlider" id="leftPowerSlider">
-        <input type="range" min="1" max="100" value="50" class="rightPowerSlider" id="rightPowerSlider">
-    </div>
-    <div class="powerDisplay">
-        <p><span id="leftPowerDisplay"></span></p>
-        <p><span id="rightPowerDisplay"></span></p>
-    </div>
-    <div class="slider">
-        <input id="leftAngle" />
-        <input id="rightAngle" />
-    </div>
-    <div class="puckNumber">
-        <input type="text" id="leftLauncher" class="leftLauncher" onkeypress="return AllowNumbersOnly(event)">
-        <input type="text" id="rightLauncher" class="rightLauncher" onkeypress="return AllowNumbersOnly(event)">
-    </div>
-    <div class="sendButton">
-        <button type="button" class="block" id="sendButton">Fire Pucks</button>
-    </div>
-    <p><span id="userName"></span></p>
-    <p><span id="totalPucks"></span></p>
-    <p><span id="playerScore"></span></p>
+    <div id="header"></div>
+    <div id="navigation"></div>
+    <div id="main"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.js"></script>
+    <script src="js/handlebars.runtime-v4.0.11.js"></script>
+    <script src="js/templates.js"></script>    
     <script src="js/common.js"></script>
     <script src="js/viewer.js"></script>
 </body>
