--- a/public/config.html
+++ b/public/config.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/config.css">
     </head>
     <body>
-        <p>This is the config page!</p>
+        <p>No configuration required.</p>
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script src="js/common.js"></script>
         <script src="js/config.js"></script>
