--- a/public/viewer.html
+++ b/public/viewer.html
@@ -13,9 +13,9 @@
     <div id="navigation"></div>
     <div id="main"></div>
     <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/round-slider@1.3/dist/roundslider.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <link href="css/roundslider.min.css" rel="stylesheet" />
+    <script src="js/roundslider.min.js"></script>
     <script src="js/handlebars.runtime-v4.0.11.js"></script>
     <script src="js/templates.js"></script>    
     <script src="js/common.js"></script>
