changed to new angle control

--- a/public/viewer.html
+++ b/public/viewer.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div id="header"></div>
-    <div id="navigation"></div>
     <div id="main"></div>
     <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     <script src="js/jquery.min.js"></script>
-    <link href="css/roundslider.min.css" rel="stylesheet" />
-    <script src="js/roundslider.min.js"></script>
+    <!-- <link href="css/roundslider.min.css" rel="stylesheet" /> -->
+    <!-- <script src="js/roundslider.min.js"></script> -->
+    <!-- <script src="js/roundslider.js"></script> -->
     <script src="js/handlebars.runtime-v4.0.11.js"></script>
     <script src="js/templates.js"></script>    
     <script src="js/common.js"></script>
