--- a/public/live_config.html
+++ b/public/live_config.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/live_config.css">
     </head>
     <body>
-        <p>This is the live config page!</p>
+        <p>No configuration necessary.</p>
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script src="js/common.js"></script>
         <script src="js/live_config.js"></script>
