--- a/public/config.html
+++ b/public/config.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/config.css">
     </head>
     <body>
-        <p>No configuration required.</p>
+        <p>This extension is intended to interact with the Stream Pucks game, which is currently under development. If you would like to join the private beta for this game, please contact us at <a href="mailto:contact@streamgenie.tv?Subject=Stream%20Pucks%20Private%20Beta">contact@streamgenie.tv</a> and we'll be happy to set you up.</p>
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script src="js/common.js"></script>
         <script src="js/config.js"></script>
