--- a/public/viewer.html
+++ b/public/viewer.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="header"></div>
+    <div id="tabs"></div>
     <div id="main"></div>
     <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     <script src="js/jquery.min.js"></script>
